Test runtime/cds/appcds/SignedJar.java fails

XMLWordPrintable

    • b25
    • Verified

      ----------System.err:(34/2227)----------
       stdout: [[0.004s][info][class,load] opened: /opt/mach5/mesos/work_dir/jib-master/install/jdk-15+24-1145/linux-x64-debug.jdk/jdk-15/fastdebug/lib/modules
      [0.050s][info][class,load] java.lang.Object source: shared objects file
      [0.050s][info][class,load] java.io.Serializable source: shared objects file
      [0.050s][info][class,load] java.lang.Comparable source: shared objects file
      [0.050s][info][class,load] java.lang.CharSequence source: shared objects file
      [0.050s][info][class,load] java.lang.constant.Constable source: shared objects file
      [0.050s][info][class,load] java.lang.constant.ConstantDesc source: shared objects file
      [0.051s][info][class,load] java.lang.String source: shared objects file
      [0.051s][info][class,load] java.lang.reflect.AnnotatedElement source: shared objects file
      [0.051s][info][class,load] java.lang.reflect.GenericDeclaration source: shared objects file
      [0.051s][info][class,load] java.lang.reflect.Type source: shared objects file
      [0.051s][info][class,load] java.lang.invoke.TypeDescriptor source: shared objects file
      [0.051s][info][class,load] java.lang.invoke.TypeDescriptor$OfField source: shared objects file
      [0.051s][info][class,load] java.lang.Class source: shared objects file
      Error occurred during initialization of VM
      java/lang/NoSuchMethodError: Method 'int java.lang.Object.hashCode()' name or signature does not match
      ];
       stderr: []
       exitValue = 1

      Failure appeared with changes to JDK-8242151 and JDK-8245151, both related to siging and jars and the test uses a signed jar. Nothing obvious though. I suspect an error of some kind hidden during jar creation.

        There are no Sub-Tasks for this issue.

            Assignee:
            Yumin Qi
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: